samples/_failures_safe/1761248554_3b2482_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6073e74.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_d6073e74.c:149:20: error: missing terminating " character
  149 |             printf(", capitalized
      |                    ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_d6073e74.c:149:13: error: expected expression at end of input
  149 |             printf(", capitalized
      |             ^~~~~~
./samples/SAFE/__tmp_d6073e74.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6073e74.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6073e74.c:149:13: error: expected declaration or statement at end of input
